--- a/docs/quick_start.ipynb
+++ b/docs/quick_start.ipynb
@@ -59,7 +59,7 @@
         " os.system(\"pip install --extra-index-url https://test.pypi.org/simple/ stocksml==0.0.1rc14\")\n",
         " print('installed stocksml')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
         "\n",
         "Demo(notebook=True)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -123,7 +123,7 @@
         "id": "R8BMPIxJiBtS"
       },
       "source": [
-        "# Building Training Data\n",
+        "## Load Data\n",
         "\n"
       ]
     },
@@ -131,11 +131,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "3vyPv3qmiHsZ",
-        "outputId": "9a1b5b75-3b4c-4ae2-93d0-6ae61cee3c23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "outputId": "9a1b5b75-3b4c-4ae2-93d0-6ae61cee3c23"
       },
       "source": [
         "from stocksml import LoadData, BuildData\n",
@@ -148,7 +148,7 @@
         "\n",
         "fdf.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,30 +300,19 @@
         "id": "XSbUu8z1gXhT"
       },
       "source": [
-        "# Building a Model\n",
+        "## Build a Model\n",
         "\n",
-        "Models can be created through a simple structure that defines each hidden layer. Keras and Tensorflow are used under the covers so many of the common layer types available in Keras are passed through including:\n",
-        "- Dense Neural Network\n",
-        "- Recurrent Neural Network\n",
-        "- Long Short-Term Memory Network\n",
-        "- Convolutional Neural Network\n",
-        "- Dropout\n",
-        "\n",
-        "The desired output size of each layer must also be defined. Activations and other settings are fixed. StocksML will attempt to fit together layers correctly and align with the training data, but some care must be taken to define things in a way that makes sense.\n",
-        "\n",
-        "StocksML uses an unsupervised adversarial algorithm for learning new trading strategies. This requires at least two models to learn from each other. Additional models are created by copying the first model and re-initializing the initial weights.\n",
-        "\n",
-        "The ```BuildModel``` function returns a list of Keras models and a numpy array of training data appropriately shaped for the model set."
+        "Define a model and create a set of 2 or more with corresponding training data."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ks_d6bNzh8a_",
-        "outputId": "98c4daea-90b6-4c29-b54b-24a3501d7e46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "98c4daea-90b6-4c29-b54b-24a3501d7e46"
       },
       "source": [
         "from stocksml import BuildModel\n",
@@ -332,7 +321,7 @@
         "\n",
         "models[0].summary()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +359,7 @@
         "id": "pANwwf5TogrA"
       },
       "source": [
-        "# Learning a Strategy\n",
+        "## Learn a Strategy\n",
         "\n",
         "After creating a set of adversarial models and the corresponding training data formatted for them, StocksML is ready to learn a new trading strategy.  This is done in an unsupervised manner, meaning no truth data is provided.  \n",
         "\n",
@@ -383,18 +372,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "EiCUBsJFp4he",
-        "outputId": "c619e847-ed9e-4bff-8cf1-7f5e8edc8de9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        }
+        },
+        "outputId": "c619e847-ed9e-4bff-8cf1-7f5e8edc8de9"
       },
       "source": [
         "from stocksml import LearnStrategy\n",
         "\n",
         "LearnStrategy(models, sdf, dx, symbols, 'SPY', 5, 500, True)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -416,7 +405,7 @@
         "id": "8xtCu-Sjqdt3"
       },
       "source": [
-        "# Examining a Strategy\n",
+        "## Examine the Strategy\n",
         "\n",
         "Once a trading strategy has been learned, it can be applied to different points in time across the available market data to see what it does and how it performs. \n",
         "\n",
@@ -427,17 +416,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "5zJTA7ccq-7c",
-        "outputId": "393eda63-0862-4161-8f40-046824990125",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "393eda63-0862-4161-8f40-046824990125"
       },
       "source": [
         "from stocksml import ExamineStrategy\n",
         "\n",
         "ExamineStrategy(models[0], sdf, dx, symbols, '2021-02-01', days=5, baseline='SPY')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
