--- a/docs/modeling.ipynb
+++ b/docs/modeling.ipynb
@@ -43,10 +43,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pErXt3n7C87y",
-        "outputId": "c5a71b10-1ab1-446b-cf8d-f8b0ebd66497"
+        "outputId": "c4b115c0-425e-475e-c090-68e3f1e15b31"
       },
       "source": [
-        "!pip install --extra-index-url https://test.pypi.org/simple/ stocksml==0.0.1rc18 >/dev/null\n",
+        "!pip install stocksml >/dev/null\n",
         "from stocksml import LoadData, BuildData, BuildModel \n",
         "\n",
         "sdf, symbols = LoadData(symbols=['SPY','BND', 'VNQI', 'VIXM'])\n",
@@ -73,7 +73,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Olqex-DZEVYl",
-        "outputId": "9cf18e25-8340-49d2-91e1-2d06d92a0d07"
+        "outputId": "a6f78ab0-5b2f-4703-9c9a-3816640da9eb"
       },
       "source": [
         "models, dx = BuildModel(fdf, len(symbols), count=2, layers=[('dnn',128),\n",
@@ -84,7 +84,7 @@
         "print('training data shape', dx.shape)\n",
         "models[0].summary()"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VZae7Xe1D6cJ",
-        "outputId": "72b1352f-38f4-42fa-c7ea-ad06b3c0ffd3"
+        "outputId": "c40896b8-fe39-4031-d0ea-ae81798eeb50"
       },
       "source": [
         "models, dx = BuildModel(fdf, len(symbols), count=2, \n",
@@ -164,7 +164,7 @@
         "print('training data shape', dx.shape)\n",
         "models[0].summary()"
       ],
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2347549-46f3-4332-aa0c-315ccd1e8491"
+        "outputId": "9bd25741-0406-4c0e-b3f2-12d4eaff94d7"
       },
       "source": [
         "models, dx = BuildModel(fdf, len(symbols), count=2, \n",
@@ -240,7 +240,7 @@
         "print('training data shape', dx.shape)\n",
         "models[0].summary()"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,9 +258,9 @@
             "__________________________________________________________________________________________________\n",
             "cnn_2 (Conv1D)                  (None, 1, 16)        1552        drop_1[0][0]                     \n",
             "__________________________________________________________________________________________________\n",
-            "flatten_2 (Flatten)             (None, 16)           0           cnn_2[0][0]                      \n",
+            "flatten (Flatten)               (None, 16)           0           cnn_2[0][0]                      \n",
             "__________________________________________________________________________________________________\n",
-            "drop_3 (Dropout)                (None, 16)           0           flatten_2[0][0]                  \n",
+            "drop_3 (Dropout)                (None, 16)           0           flatten[0][0]                    \n",
             "__________________________________________________________________________________________________\n",
             "dnn_4 (Dense)                   (None, 32)           544         drop_3[0][0]                     \n",
             "__________________________________________________________________________________________________\n",
@@ -308,13 +308,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tc-TKBwjlvLf",
-        "outputId": "355dbd62-bd05-42bd-ecfb-e8492e01cbde"
+        "outputId": "7441c947-86be-4808-bc1c-2922345f9ae8"
       },
       "source": [
         "models, dx = BuildModel(fdf, 2, count=2, layers=[('dnn',128),('dnn',64),('dnn',32)])\n",
         "models[0].summary()"
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
